src/ui/snapshots/voyage_dock_just_docked_xl_160x45.snap
---
source: src/ui/overlay_snapshot_tests.rs
expression: frame
---
Buffer {
    area: Rect { x: 0, y: 0, width: 160, height: 45 },
    content: [
        "┌ ◉ The Dock ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐",
        "│                                                                                                                                                              │",
        "│                                                                           RIFTGLASS                                                                          │",
        "│ [----------------------------------------------------------------------------------------------------------------------------------------------------------] │",
        "│                                               0% charged  ·  20.0× charge rate (the Drive yard's speed, reused)                                              │",
        "│                                                                                                                                                              │",
        "│                                                    A jump before full charge is a shorter wait, at a cost:                                                   │",
        "│                                 if you jump now: 85 provisions, 3 hull scars  ·  at 100% charge: 125 provisions, 0 hull scars                                │",
        "│                                                                                                                                                              │",
        "│                                              [J] / [Enter] Jump  ·  [L] Reckoning  ·  [R] Record  ·  [Esc] Chart                                             │",
        "│                                                                                                                                                              │",
        "│                                                                                                                                                              │",
        "│                                                                                                                                                              │",
        "│                                                                                                                                                              │",
        "│                                                                                                                                                              │",
        "│                                                                                                                                                              │",
        "│                                                                                                                                                              │",
        "│                                                                                                                                                              │",
        "│                                                                                                                                                              │",
        "│                                                                                                                                                              │",
        "│                                                                                                                                                              │",
        "│                                                                                                                                                              │",
        "│                                                                                                                                                              │",
        "│                                                                                                                                                              │",
        "│                                                                                                                                                              │",
        "│                                                                                                                                                              │",
        "│                                                                                                                                                              │",
        "│                                                                                                                                                              │",
        "│                                                                                                                                                              │",
        "│                                                                                                                                                              │",
        "│                                                                                                                                                              │",
        "│                                                                                                                                                              │",
        "│                                                                                                                                                              │",
        "│                                                                                                                                                              │",
        "│                                                                                                                                                              │",
        "│                                                                                                                                                              │",
        "│                                                                                                                                                              │",
        "│                                                                                                                                                              │",
        "│                                                                                                                                                              │",
        "│                                                                                                                                                              │",
        "│                                                                                                                                                              │",
        "│                                                                                                                                                              │",
        "│                                                                                                                                                              │",
        "│                                                                                                                                                              │",
        "└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 1, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 76, y: 2, fg: Gray, bg: Reset, underline: Reset, modifier: BOLD,
        x: 85, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 2, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 3, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 158, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 3, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 48, y: 4, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 113, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 4, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 5, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 53, y: 6, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 108, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 6, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 34, y: 7, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 127, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 7, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 8, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 47, y: 9, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 114, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 9, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 10, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 11, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 12, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 13, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 14, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 15, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 16, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 17, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 18, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 19, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 20, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 21, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 22, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 23, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 24, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 25, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 25, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 26, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 26, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 27, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 27, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 28, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 28, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 29, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 29, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 30, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 30, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 31, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 32, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 32, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 33, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 33, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 34, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 34, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 35, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 35, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 36, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 36, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 37, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 37, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 38, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 38, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 39, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 39, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 40, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 40, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 41, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 41, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 42, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 42, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 43, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 43, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
    ]
}
